# volume_rendering_plot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: cfg.yaml
src/tests/: aabb_test.py  volume_rendering_test.py
src/utils/: base_plotter.py  camera_mover.py  camera_plotter.py  get_yaml.py  logger_global.py  np_vec.py  plotter_fig.py
src/volume_rendering/: aabb.py  aabb_test.py  cube_plotter.py  get_cube.py  ray_caster.py  ray_plotter.py  raycast.py  raycaster.py  volume_renderer.py  volume_rendering.py
